<resources>
    <string name="app_name">infoBilbao</string>
    <string name="salir">Exit</string>
    <string name="settings">Settings</string>

    <!--Dialogo Alerta Internet-->
    <string name="titleAlert">No Internet Connection</string>
    <string name="messageAlert">It looks like your internet connection is off. Please turn it on and try again</string>

    <!--Barra de progresso-->
    <string name="messageProgressDialog">Please wait...</string>

    <!-- Language settings -->
    <string name="language">Language</string>
    <string name="languageTitle">LANGUAGE</string>
    <string name="pref_skyn_title">Appearance</string>
    <string name="pref_idioma_title">Language</string>
    <string name="pref_idioma_summary">Choose the language</string>
    <string name="pref_idioma_dialogtitle">Choose language:</string>
    <string name="configuracion">Settings</string>

    <string-array name="pref_idioma_entryvalues">
        <item>en</item>
        <item>es</item>
    </string-array>

    <string-array name="pref_idioma_entries">
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <!--Notifications settings-->
    <string name="notificationsTitle">NOTIFICATIONS</string>
    <string name="pref_notifications_title">Notifications</string>
    <string name="pref_notifications_summary">Activate notifications</string>

    <!--Alerts settings-->
    <string name="alertsTitle">ALERTS</string>
    <string name="pref_alerts_title">Choose alerts</string>
    <string name="pref_alerts_summary">Choose the alerts to show</string>
    <string name="pref_alerts_dialogtitle">Choose the alerts:</string>

    <string-array name="pref_alerts_entryvalues">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
    </string-array>

    <string-array name="pref_alerts_entries">
        <item>Todo Bilbao</item>
        <item>Avisos de agua y suministros</item>
        <item>Avisos de temas varios</item>
        <item>Avisos de trafico y transportes</item>
        <item>Avisos del distrito 1 deusto</item>
        <item>Avisos del distrito 2 uribarri</item>
        <item>Avisos del distrito 3 otxarkoaga txurdinaga</item>
        <item>Avisos del distrito 4 begoña</item>
        <item>Avisos del distrito 5 ibaiondo</item>
        <item>Avisos del distrito 6 abando</item>
        <item>Avisos del distrito 7 rekalde</item>
        <item>Avisos del distrito 8 basurto zorroza</item>
        <item>Noticias de temas de aparcamientos</item>
        <item>Noticias de temas de deporte</item>
        <item>Noticias de temas de economia y hacienda</item>
        <item>Noticias de temas de educacion</item>
        <item>Noticias de temas de empleo</item>
        <item>Noticias de temas de infancia</item>
        <item>Noticias de temas de juventud</item>
        <item>Noticias de temas de medio ambiente</item>
        <item>Noticias de temas de obras y servicios</item>
        <item>noticias de temas de ocio y cultura</item>
        <item>Noticias de temas de recursos humanos</item>
        <item>Noticias de temas de salud</item>
        <item>Noticias de temas de seguridad</item>
        <item>Noticias de temas de trafico y transportes</item>
        <item>Noticias de temas de turismo</item>
        <item>Noticias de temas de urbanismo y vivienda</item>
        <item>Noticias de temas de temas sociales</item>
        <item>Noticias de ultima hora bilbobu</item>
        <item>Noticias del distrito 1 deusto</item>
        <item>Noticias del distrito 2 uribarri"</item>
        <item>Noticias del distrito 3 otxarkoaga txurdinaga</item>
        <item>Noticias del distrito 4 begoña</item>
        <item>Noticias del distrito 5 ibaiondo</item>
        <item>Noticias del distrito 6 abando</item>
        <item>Noticias del distrito 7 rekalde</item>
        <item>Noticias del distrito 8 basurto zorroza</item>
    </string-array>


</resources>
