<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title = "@string/languageTitle"
        android:key="pref_key_language">

        <ListPreference
            android:key="pref_idiom"
            android:title="@string/pref_idioma_title"
            android:summary="@string/pref_idioma_summary"
            android:entries="@array/pref_idioma_entries"
            android:entryValues="@array/pref_idioma_entryvalues"
            android:dialogTitle="@string/pref_idioma_dialogtitle"
            android:defaultValue="en" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/divider_settings">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/notificationsTitle"
        android:key="pref_key_notification">
        <CheckBoxPreference
            android:key="pref_key_check_notification"
            android:summary="@string/pref_notifications_summary"
            android:title="@string/pref_notifications_title"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/divider_settings">
    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/alertsTitle"
        android:key="pref_key_alerts">
        <MultiSelectListPreference
            android:key="pref_alert"
            android:title="@string/pref_alerts_title"
            android:summary="@string/pref_alerts_summary"
            android:entries="@array/pref_alerts_entries"
            android:entryValues="@array/pref_alerts_entryvalues"/>
    </PreferenceCategory>

</PreferenceScreen>
